CHANGELOG

== August 31, 2012
* Added Links page
* Increased history versions to keep to 300

== August 30, 2012
* Added Comment Notifications for articles
* Added page for users to manage subscriptions

== August 28, 2012
* Saving of site Searches by non-bots
* Updated Gems

== August 21, 2012
* Fixed Youtube videos

== August 19, 2012
* Longer Caching
* Full page caching for bots
* Full cache for RSS/ATOM formats

== August 17, 2012
* Add Ability to preview/rollback previous versions
* Nicer CSS for related items list
* Added Password strength meter on registration form
* Upgraded jquery to 1.8.0
* Updated Gems

== August 12, 2012
* Improved Admin interface
* Improved Serch results
* Searching scoped on site language

== August 10, 2012
* Fix Bug that un-published items shows on similar items
* Full JRuby support
* fixed youtube video Javascript loading
* Added some translations, ie. Dutch
* Improved performance of /admin pages
* Cleaned up ActiveAdmin filters/sidebar
* Visual improvements in admin Images
* Fixed bug that Authors did not see 'New Item' link

== August 8, 2012
* Change to rmagick from mini_magick
* Several SQL performance improvements
* Improved SQL Joins
* Better caching on sidebar and navbar
* Allow target, rel and rev tags in comment links

== August 4, 2012
* Fixed Sitemap
* Added languages to Sitemap
* Improved HTTP caching headers

== August 3, 2012
* Big performance improvements
* Added indexex to some tables
* Added caching to RSS and ATOM feed
* Added Cannonical links to articles for google
* Added rel/rev to links
* Increased caching time

== August 1, 2012
* Improved registration and login forms
* Fixed caching with languages Locale

== July 31, 2012
* Updated to rails 3.2.7
* Using larger image for opengraph (G+,Twitter)
* Added more tests

== July 29, 2012
* Added Multi-language site with subdomains
* Added Flags to language menu
* Improved Admin interface
* Improved Error Alerts with Twitter-bootstrap
* Better Error Pages