@@ -3,6 +3,7 @@ CHANGELOG
 == August 31, 2012
 * Added Links page
 * Increased history versions to keep to 300
+* Multiple Image uploading on admin interface
 
 == August 30, 2012
 * Added Comment Notifications for articles
